# parseoai

./: .gitignore  gNB_logs_27-02-2025_17-13-46__27-02-2025_17-14-32.json  gNB_logs_27-02-2025_17-47-58__27-02-2025_17-48-39.json  gNB_logs_28-02-2025_20-26-35__28-02-2025_20-36-36.json  parsed_output.xlsx  parsed_output_general.csv  parser.py  parserj.py  phase_imbalance.m  pyproject.toml  sampledata.txt  sampledata1.txt
ISE_based/: requirements.txt
ISE_based/data/: 53d6.csv  DataReadME.md  authentic_2_normal.csv  authentic_3_obstacles.csv  csv_correct.py  non_authentic_1_diff_position.csv  non_authentic_3_no_antennas.csv  rejected_ues.csv  ue209_6222.csv  ue210.csv  ue211_17483.csv  ue212_3414.csv  ue216_2966.csv  ue224_1556.csv  ue229_5707.csv  ue230_3415.csv  ue233_2115.csv  ue236_6543.csv  ue242_4871.csv  ue245_3417.csv  ue248_1950.csv
ISE_based/notebooks/: EDA_and_Clustering.ipynb  new.ipynb
ISE_based/src/: config.py  preprocess.py
Jupyter_Notebooks_Clustering/: README.md  Training_DATA
Jupyter_Notebooks_Clustering/Clusterning_Algorithms/: ML_ReadME.md  (+3 more)
event_definition/: events.txt  feature_vector.csv  feature_vector1.csv  parserj.py
logs/: gNB_logs_14-04-2025_12-47-44__14-04-2025_12-57-19.json  gNB_logs_14-04-2025_13-21-43__14-04-2025_13-34-10.json  gNB_logs_14-04-2025_13-38-12__14-04-2025_13-42-55.json  gNB_logs_14-04-2025_13-38-12__14-04-2025_14-03-00.json  gNB_logs_28-02-2025_20-26-35__28-02-2025_20-38-29.json
matlab_scripts/: all_data.mlx  csi_feedback.m  ue_authentication_data.csv  ue_authentication_data1.csv
phy_auth_intelligent/: README.md
(+15 files in other folders)
