[tool.poetry]
name = "parseroai"
version = "0.1.0"
description = ""
authors = ["mihirraj dixit <dixitmn6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
